--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
                         protection, low latency, and packet loss. Shared
                         hosting, VPS, dedicated server, cloud solution, GPU, or
                         streaming server, significant data storage, 10Gbps, or
-                        bare metal beast - crypto payments are welcome.
+                        bare metal beas ().
+
                         <br /><br />
                         Ticket response time:
                         <span class="text--lightwhite">15 minutes</span><br />
@@ -526,11 +527,7 @@
                       <p class="hero__description">
                         VSYS Host operates in Kyiv, Seattle, and Amsterdam's
                         top-tier data centers. 99.9% uptime guaranteed, DDoS
-                        protection, low latency, and packet loss. Shared
-                        hosting, VPS, dedicated server, cloud solution, GPU, or
-                        streaming server, significant data storage, 10Gbps, or
-                        bare metal beast - crypto payments are welcome.
-                        <br /><br />
+                        protection, low latency, and packet loss. <br /><br />
                         Ticket response time:
                         <span class="text--lightwhite">15 minutes</span><br />
                         Uptime of our servers:
@@ -693,6 +690,9 @@
                 <p class="services-label__title">Dedicated from $18 /month</p>
                 <p class="services-label__title">Vps from $18 /month</p>
               </div> -->
+              <h2 class="section-title section-title--gradient">
+                TOP-SELLER AMONG SERVER SOLUTIONS
+              </h2>
 
               <ul class="services-cards__list">
                 <li class="services-cards__item services-cards__item--blue">
@@ -738,7 +738,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a href="#" class="button button-sm btn-grad"
+                  <a href="#" class="button button-sm button--light"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -786,7 +786,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a href="#" class="button button-sm btn-grad"
+                  <a href="#" class="button button-sm button--light"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -834,7 +834,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a href="#" class="button button-sm btn-grad"
+                  <a href="#" class="button button-sm button--light"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -882,7 +882,7 @@
                     24x7 Support<span class="services-cards__value">+</span>
                   </p>
 
-                  <a href="#" class="button button-sm btn-grad"
+                  <a href="#" class="button button-sm button--light"
                     >10 GBPS SERVER CONFIGURE</a
                   >
                 </li>
@@ -1040,20 +1040,24 @@
 
               <ul class="services-vps__list">
                 <li class="services-vps__item">
-                  <a class="button button-sm btn-grad" href="#"
+                  <a class="button button-sm button--light" href="#"
                     >Ukraine SSD VPS</a
                   >
                 </li>
                 <li class="services-vps__item">
-                  <a class="button button-sm btn-grad" href="#"
+                  <a class="button button-sm button--light" href="#"
                     >Netherlands SSD VPS</a
                   >
                 </li>
                 <li class="services-vps__item">
-                  <a class="button button-sm btn-grad" href="#">usa SSD VPS</a>
+                  <a class="button button-sm button--light" href="#"
+                    >usa SSD VPS</a
+                  >
                 </li>
                 <li class="services-vps__item">
-                  <a class="button button-sm btn-grad" href="#">epic VPS</a>
+                  <a class="button button-sm button--light" href="#"
+                    >epic VPS</a
+                  >
                 </li>
               </ul>
             </div>
@@ -1140,17 +1144,10 @@
           <h2 class="section-title section-title--gradient">Why vsys host?</h2>
 
           <div class="advantages-steps">
-            <!-- <svg width="200px" heigth="163px">
-              <use
-                class="advantages-steps-section__svg"
-                href="./images/why-vsys-host__section.svg"
-              ></use>
-            </svg> -->
-            <!-- <img
-              class="advantages-steps__img"
-              src="./images/why-vsys-host__section.svg"
-              alt="advantages-steps section illustration"
-            /> -->
+            <img
+              src="./images/advantages-illustratuon_0.svg"
+              alt="Illustration"
+            />
             <div>
               <h3 class="section-subtitle">
                 EASY TO MAKE AN ORDER WITHOUT KYC, JUST 3 simple steps:
