--- a/index.html
+++ b/index.html
@@ -468,14 +468,13 @@
             <ul class="slider-content swiper-wrapper">
               <li class="slider__container swiper-slide">
                 <div class="hero__content">
-                  <h1 class="hero__title">
-                    Quality has a name - Vsys Host,
-                    <span class="hero__title--nowrap"><br /></span>
-                    the top-notch hosting provider
-                  </h1>
-
                   <div class="hero__thumb">
                     <div class="hero__info">
+                      <h1 class="hero__title">
+                        Quality has a name - Vsys Host,
+                        <span class="hero__title--nowrap"></span>
+                        the top-notch hosting provider
+                      </h1>
                       <p class="hero__description">
                         VSYS Host operates in Kyiv, Seattle, and Amsterdam's
                         top-tier data centers. 99.9% uptime guaranteed, DDoS
@@ -516,18 +515,22 @@
 
               <li class="slider__container swiper-slide">
                 <div class="hero__content">
-                  <h1 class="hero__title">
-                    Quality has a name - Vsys Host,
-                    <span class="hero__title--nowrap"><br /></span>
-                    the top-notch hosting provider
-                  </h1>
-
                   <div class="hero__thumb">
                     <div class="hero__info">
+                      <h1 class="hero__title">
+                        Quality has a name - Vsys Host,
+                        <span class="hero__title--nowrap"></span>
+                        the top-notch hosting provider
+                      </h1>
                       <p class="hero__description">
                         VSYS Host operates in Kyiv, Seattle, and Amsterdam's
                         top-tier data centers. 99.9% uptime guaranteed, DDoS
-                        protection, low latency, and packet loss. <br /><br />
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beas ().
+
+                        <br /><br />
                         Ticket response time:
                         <span class="text--lightwhite">15 minutes</span><br />
                         Uptime of our servers:
@@ -559,21 +562,26 @@
 
               <li class="slider__container swiper-slide">
                 <div class="hero__content">
-                  <h1 class="hero__title">
-                    Quality has a name - Vsys Host,
-                    <span class="hero__title--nowrap"><br /></span>
-                    the top-notch hosting provider
-                  </h1>
-
                   <div class="hero__thumb">
                     <div class="hero__info">
+                      <h1 class="hero__title">
+                        Quality has a name - Vsys Host,
+                        <span class="hero__title--nowrap"></span>
+                        the top-notch hosting provider
+                      </h1>
                       <p class="hero__description">
                         VSYS Host operates in Kyiv, Seattle, and Amsterdam's
                         top-tier data centers. 99.9% uptime guaranteed, DDoS
                         protection, low latency, and packet loss. Shared
                         hosting, VPS, dedicated server, cloud solution, GPU, or
                         streaming server, significant data storage, 10Gbps, or
-                        bare metal beast - crypto payments are welcome.
+                        bare metal beas ().VSYS Host operates in Kyiv, Seattle,
+                        and Amsterdam's top-tier data centers. 99.9% uptime
+                        guaranteed, DDoS protection, low latency, and packet
+                        loss. Shared hosting, VPS, dedicated server, cloud
+                        solution, GPU, or streaming server, significant data
+                        storage, 10Gbps, or bare metal beas ().
+
                         <br /><br />
                         Ticket response time:
                         <span class="text--lightwhite">15 minutes</span><br />
