--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap"
       rel="stylesheet"
     /> -->
-
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
-    />
+    <!-- <link href="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
+" rel="stylesheet"></link> -->
+    <link rel="stylesheet" href="./css/splide.min.css" />
 
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -462,8 +461,159 @@
         <!-- <div class="slider__controls">
           <button id="left">left</button> <button id="right">right</button>
         </div> -->
-
         <div class="container section">
+          <div class="splide">
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <div class="hero__content">
+                    <div class="hero__thumb">
+                      <div class="hero__info">
+                        <h1 class="hero__title">
+                          Quality has a name - Vsys Host,
+                          <span class="hero__title--nowrap"></span>
+                          the top-notch hosting provider
+                        </h1>
+                        <p class="hero__description">
+                          VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                          top-tier data centers. 99.9% uptime guaranteed, DDoS
+                          protection, low latency, and packet loss. Shared
+                          hosting, VPS, dedicated server, cloud solution, GPU,
+                          or streaming server, significant data storage, 10Gbps,
+                          or bare metal beas (). protection, low latency, and
+                          packet loss. Shared hosting, VPS, dedicated server,
+                          cloud solution, GPU, or streaming server, significant
+                          data storage, 10Gbps, or bare metal beas ().
+
+                          <br /><br />
+                          Ticket response time:
+                          <span class="text--lightwhite">15 minutes</span><br />
+                          Uptime of our servers:
+                          <span class="text--lightblue">99.9% </span
+                          ><br />Payments:
+                        </p>
+                      </div>
+
+                      <div class="hero__image">
+                        <img
+                          width="222px"
+                          class="hero__svg"
+                          src="./images/balancing-blue.svg"
+                          alt="Server illustration"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="hero__buttons">
+                      <a class="button button--transparent" href=""
+                        >CHECK PRICING FOR USA DEDICATED SERVER</a
+                      >
+                      <button class="button button--transparent">
+                        CONTACT SALES TEAM
+                      </button>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="hero__content">
+                    <div class="hero__thumb">
+                      <div class="hero__info">
+                        <h1 class="hero__title">
+                          Quality has a name - Vsys Host,
+                          <span class="hero__title--nowrap"></span>
+                          the top-notch hosting provider
+                        </h1>
+                        <p class="hero__description">
+                          VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                          top-tier data centers. 99.9% uptime guaranteed, DDoS
+                          protection, low latency, and packet loss. Shared
+                          hosting, VPS, dedicated server, cloud solution, GPU,
+                          or streaming server, significant data storage, 10Gbps,
+                          or bare metal beas ().
+
+                          <br /><br />
+                          Ticket response time:
+                          <span class="text--lightwhite">15 minutes</span><br />
+                          Uptime of our servers:
+                          <span class="text--lightblue">99.9% </span
+                          ><br />Payments:
+                        </p>
+                      </div>
+
+                      <div class="hero__image">
+                        <img
+                          width="222px"
+                          class="hero__svg"
+                          src="./images/balancing-blue.svg"
+                          alt="Server illustration"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="hero__buttons">
+                      <a class="button button--transparent" href=""
+                        >CHECK PRICING FOR USA DEDICATED SERVER</a
+                      >
+                      <button class="button button--transparent">
+                        CONTACT SALES TEAM
+                      </button>
+                    </div>
+                  </div>
+                </li>
+                <li class="splide__slide">
+                  <div class="hero__content">
+                    <div class="hero__thumb">
+                      <div class="hero__info">
+                        <h1 class="hero__title">
+                          Quality has a name - Vsys Host,
+                          <span class="hero__title--nowrap"></span>
+                          the top-notch hosting provider
+                        </h1>
+                        <p class="hero__description">
+                          VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                          top-tier data centers. 99.9% uptime guaranteed, DDoS
+                          protection, low latency, and packet loss. Shared
+                          hosting, VPS, dedicated server, cloud solution, GPU,
+                          or streaming server, significant data storage, 10Gbps,
+                          or bare metal beas ().
+
+                          <br /><br />
+                          Ticket response time:
+                          <span class="text--lightwhite">15 minutes</span><br />
+                          Uptime of our servers:
+                          <span class="text--lightblue">99.9% </span
+                          ><br />Payments:
+                        </p>
+                      </div>
+
+                      <div class="hero__image">
+                        <img
+                          width="222px"
+                          class="hero__svg"
+                          src="./images/balancing-blue.svg"
+                          alt="Server illustration"
+                        />
+                      </div>
+                    </div>
+
+                    <div class="hero__buttons">
+                      <a class="button button--transparent" href=""
+                        >CHECK PRICING FOR USA DEDICATED SERVER</a
+                      >
+                      <button class="button button--transparent">
+                        CONTACT SALES TEAM
+                      </button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- swiper slider -->
+
+        <!-- <div class="container section">
           <div class="slider__viewbox swiper">
             <ul class="slider-content swiper-wrapper">
               <li class="slider__container swiper-slide">
@@ -481,103 +631,7 @@
                         protection, low latency, and packet loss. Shared
                         hosting, VPS, dedicated server, cloud solution, GPU, or
                         streaming server, significant data storage, 10Gbps, or
-                        bare metal beas ().
-
-                        <br /><br />
-                        Ticket response time:
-                        <span class="text--lightwhite">15 minutes</span><br />
-                        Uptime of our servers:
-                        <span class="text--lightblue">99.9% </span
-                        ><br />Payments:
-                      </p>
-
-                      <div class="hero__buttons">
-                        <a class="button button--transparent" href=""
-                          >CHECK PRICING FOR USA DEDICATED SERVER</a
-                        >
-                        <button class="button button--transparent">
-                          CONTACT SALES TEAM
-                        </button>
-                      </div>
-                    </div>
-
-                    <div class="hero__image">
-                      <img
-                        width="222px"
-                        class="hero__svg"
-                        src="./images/balancing-blue.svg"
-                        alt="Server illustration"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="slider__container swiper-slide">
-                <div class="hero__content">
-                  <div class="hero__thumb">
-                    <div class="hero__info">
-                      <h1 class="hero__title">
-                        Quality has a name - Vsys Host,
-                        <span class="hero__title--nowrap"></span>
-                        the top-notch hosting provider
-                      </h1>
-                      <p class="hero__description">
-                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
-                        top-tier data centers. 99.9% uptime guaranteed, DDoS
-                        protection, low latency, and packet loss. Shared
-                        hosting, VPS, dedicated server, cloud solution, GPU, or
-                        streaming server, significant data storage, 10Gbps, or
-                        bare metal beas ().
-
-                        <br /><br />
-                        Ticket response time:
-                        <span class="text--lightwhite">15 minutes</span><br />
-                        Uptime of our servers:
-                        <span class="text--lightblue">99.9% </span
-                        ><br />Payments:
-                      </p>
-
-                      <div class="hero__buttons">
-                        <a class="button button--transparent" href=""
-                          >CHECK PRICING FOR USA DEDICATED SERVER</a
-                        >
-                        <button class="button button--transparent">
-                          CONTACT SALES TEAM
-                        </button>
-                      </div>
-                    </div>
-
-                    <div class="hero__image">
-                      <img
-                        width="222px"
-                        class="hero__svg"
-                        src="./images/balancing-blue.svg"
-                        alt="Server illustration"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="slider__container swiper-slide">
-                <div class="hero__content">
-                  <div class="hero__thumb">
-                    <div class="hero__info">
-                      <h1 class="hero__title">
-                        Quality has a name - Vsys Host,
-                        <span class="hero__title--nowrap"></span>
-                        the top-notch hosting provider
-                      </h1>
-                      <p class="hero__description">
-                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
-                        top-tier data centers. 99.9% uptime guaranteed, DDoS
-                        protection, low latency, and packet loss. Shared
-                        hosting, VPS, dedicated server, cloud solution, GPU, or
-                        streaming server, significant data storage, 10Gbps, or
-                        bare metal beas ().VSYS Host operates in Kyiv, Seattle,
-                        and Amsterdam's top-tier data centers. 99.9% uptime
-                        guaranteed, DDoS protection, low latency, and packet
+                        bare metal beas (). protection, low latency, and packet
                         loss. Shared hosting, VPS, dedicated server, cloud
                         solution, GPU, or streaming server, significant data
                         storage, 10Gbps, or bare metal beas ().
@@ -589,15 +643,6 @@
                         <span class="text--lightblue">99.9% </span
                         ><br />Payments:
                       </p>
-
-                      <div class="hero__buttons">
-                        <a class="button button--transparent" href=""
-                          >CHECK PRICING FOR USA DEDICATED SERVER</a
-                        >
-                        <button class="button button--transparent">
-                          CONTACT SALES TEAM
-                        </button>
-                      </div>
                     </div>
 
                     <div class="hero__image">
@@ -609,17 +654,117 @@
                       />
                     </div>
                   </div>
+
+                  <div class="hero__buttons">
+                    <a class="button button--transparent" href=""
+                      >CHECK PRICING FOR USA DEDICATED SERVER</a
+                    >
+                    <button class="button button--transparent">
+                      CONTACT SALES TEAM
+                    </button>
+                  </div>
+                </div>
+              </li>
+
+              <li class="slider__container swiper-slide">
+                <div class="hero__content">
+                  <div class="hero__thumb">
+                    <div class="hero__info">
+                      <h1 class="hero__title">
+                        Quality has a name - Vsys Host,
+                        <span class="hero__title--nowrap"></span>
+                        the top-notch hosting provider
+                      </h1>
+                      <p class="hero__description">
+                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                        top-tier data centers. 99.9% uptime guaranteed, DDoS
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beas ().
+
+                        <br /><br />
+                        Ticket response time:
+                        <span class="text--lightwhite">15 minutes</span><br />
+                        Uptime of our servers:
+                        <span class="text--lightblue">99.9% </span
+                        ><br />Payments:
+                      </p>
+                    </div>
+
+                    <div class="hero__image">
+                      <img
+                        width="222px"
+                        class="hero__svg"
+                        src="./images/balancing-blue.svg"
+                        alt="Server illustration"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="hero__buttons">
+                    <a class="button button--transparent" href=""
+                      >CHECK PRICING FOR USA DEDICATED SERVER</a
+                    >
+                    <button class="button button--transparent">
+                      CONTACT SALES TEAM
+                    </button>
+                  </div>
+                </div>
+              </li>
+
+              <li class="slider__container swiper-slide">
+                <div class="hero__content">
+                  <div class="hero__thumb">
+                    <div class="hero__info">
+                      <h1 class="hero__title">
+                        Quality has a name - Vsys Host,
+                        <span class="hero__title--nowrap"></span>
+                        the top-notch hosting provider
+                      </h1>
+                      <p class="hero__description">
+                        VSYS Host operates in Kyiv, Seattle, and Amsterdam's
+                        top-tier data centers. 99.9% uptime guaranteed, DDoS
+                        protection, low latency, and packet loss. Shared
+                        hosting, VPS, dedicated server, cloud solution, GPU, or
+                        streaming server, significant data storage, 10Gbps, or
+                        bare metal beas ().
+
+                        <br /><br />
+                        Ticket response time:
+                        <span class="text--lightwhite">15 minutes</span><br />
+                        Uptime of our servers:
+                        <span class="text--lightblue">99.9% </span
+                        ><br />Payments:
+                      </p>
+                    </div>
+
+                    <div class="hero__image">
+                      <img
+                        width="222px"
+                        class="hero__svg"
+                        src="./images/balancing-blue.svg"
+                        alt="Server illustration"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="hero__buttons">
+                    <a class="button button--transparent" href=""
+                      >CHECK PRICING FOR USA DEDICATED SERVER</a
+                    >
+                    <button class="button button--transparent">
+                      CONTACT SALES TEAM
+                    </button>
+                  </div>
                 </div>
               </li>
             </ul>
 
             <div class="swiper-pagination"></div>
 
-            <!-- 
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div> -->
           </div>
-        </div>
+        </div> -->
       </section>
 
       <!-- Services  -->
@@ -1962,9 +2107,13 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
+"></script> -->
+
     <script src="./js/dropdown.js"></script>
-    <script src="./js/slider.js"></script>
+    <script src="./js/splide.min.js"></script>
+    <script src="./js/slider.js" type="module"></script>
     <script src="./js/menu.js"></script>
     <script src="./js/script.js"></script>
   </body>
